--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\EnemyScripts\EnemySpawning_script.cs" />
      <Compile Include="Assets\Scripts\EventListener.cs" />
      <Compile Include="Assets\Scripts\GameManager_script.cs" />
+     <Compile Include="Assets\Scripts\MainMenu_script.cs" />
      <Compile Include="Assets\Scripts\ReloadingScripts\Cannons_script.cs" />
      <Compile Include="Assets\Scripts\ReloadingScripts\bulletCatcher_script.cs" />
      <Compile Include="Assets\Scripts\delegate21.cs" />
