--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{143C5AEE-37F4-343E-18AB-907365AA8179}</ProjectGuid>
+	<ProjectGuid>{B5172440-C8B1-8E06-1474-0833C09788E9}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,6 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BulletScripts\Bomb_script.cs" />
+     <Compile Include="Assets\Scripts\BulletScripts\Explostion_script.cs" />
+     <Compile Include="Assets\Scripts\BulletScripts\Rock_script.cs" />
      <Compile Include="Assets\Scripts\ClickNDrag_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemyAttack_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemyMovement_script.cs" />
@@ -60,7 +63,7 @@
      <None Include="Assets\Shaders\CloudShader.shader" />
      <None Include="Assets\Shaders\waterShader.shader" />
  <Reference Include="Assembly-UnityScript-firstpass">
- <HintPath>C:/Users/LYON/Documents/GitHub/AdvGameEnginScripting/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ <HintPath>C:/Users/LYON/Documents/GitHub/AdvGameEngineScripting/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
@@ -68,7 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass-vs.csproj">
-      <Project>{DFFCD594-8642-B10A-FF7C-A8771570BBDE}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
+      <Project>{BF57FCAC-A53A-E9B5-6C2F-29930F064A6C}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
