--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{143C5AEE-37F4-343E-18AB-907365AA8179}</ProjectGuid>
+	<ProjectGuid>{B5172440-C8B1-8E06-1474-0833C09788E9}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,6 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BulletScripts\Bomb_script.cs" />
+     <Compile Include="Assets\Scripts\BulletScripts\Explostion_script.cs" />
+     <Compile Include="Assets\Scripts\BulletScripts\Rock_script.cs" />
      <Compile Include="Assets\Scripts\ClickNDrag_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemyAttack_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemyMovement_script.cs" />
@@ -65,9 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{DFFCD594-8642-B10A-FF7C-A8771570BBDE}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+      <Project>{BF57FCAC-A53A-E9B5-6C2F-29930F064A6C}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
-      <Project>{C01C55F9-692A-AA88-BC42-2D99EB7E61B4}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
+      <Project>{927A1F93-9BBE-23D0-F3F8-6944414C9A4C}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
