--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,12 +50,12 @@
      <Compile Include="Assets\Scripts\BulletScripts\Explostion_script.cs" />
      <Compile Include="Assets\Scripts\BulletScripts\Rock_script.cs" />
      <Compile Include="Assets\Scripts\ClickNDrag_script.cs" />
+     <Compile Include="Assets\Scripts\EnemyScripts\Boss_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemyAttack_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemyMovement_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\EnemySpawning_script.cs" />
      <Compile Include="Assets\Scripts\EventListener.cs" />
      <Compile Include="Assets\Scripts\GameManager_script.cs" />
-     <Compile Include="Assets\Scripts\MainMenu_script.cs" />
      <Compile Include="Assets\Scripts\ReloadingScripts\Cannons_script.cs" />
      <Compile Include="Assets\Scripts\ReloadingScripts\bulletCatcher_script.cs" />
      <Compile Include="Assets\Scripts\delegate21.cs" />
