--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BulletScripts\Bomb_script.cs" />
      <Compile Include="Assets\Scripts\BulletScripts\Explostion_script.cs" />
+     <Compile Include="Assets\Scripts\BulletScripts\Oil_script.cs" />
      <Compile Include="Assets\Scripts\BulletScripts\Rock_script.cs" />
      <Compile Include="Assets\Scripts\ClickNDrag_script.cs" />
      <Compile Include="Assets\Scripts\EnemyScripts\Boss_script.cs" />
@@ -66,7 +67,7 @@
      <None Include="Assets\Shaders\CloudShader.shader" />
      <None Include="Assets\Shaders\waterShader.shader" />
  <Reference Include="Assembly-UnityScript-firstpass">
- <HintPath>C:/Users/LYON/Documents/GitHub/AdvGameEngineScripting/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ <HintPath>C:/Users/HonPan/Documents/GitHub/AdvGameEngineScripting/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
